--- a/index.html
+++ b/index.html
@@ -3,75 +3,90 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Primenuel.FX - Forex Coaching</title>
+  <title>primenuel.fx - Forex Coaching</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Hero Section -->
   <header class="hero">
-    <div class="hero-overlay">
-      <h1>Master Forex Trading with Primenuel.FX</h1>
-      <p>Build consistency with market structure, liquidity, and SMC concepts.</p>
-      <a href="https://wa.me/2348123669335" target="_blank" class="btn">Contact Me on WhatsApp</a>
-    </div>
+    <h1>Master Forex Trading with your Success Coach <span>primenuel.fx</span></h1>
+    <p>Guiding you to consistency with Market Structure, Liquidity Concepts & Smart Money Concepts (SMC).</p>
+    <a href="#contact" class="btn">Start Learning</a>
   </header>
 
   <!-- About Section -->
-  <section id="about">
-    <h2>About Me</h2>
+  <section id="about" class="section">
+    <h2 class="section-title">About Me</h2>
     <p>
-      Hi, I'm <strong>Erimona Emmanuel</strong>, a passionate forex trader and mentor. 
-      Over the years, I've mastered market structure, liquidity concepts, and Smart Money Concepts (SMC).
-      My mentorship simplifies trading—no confusion, just clear strategies, risk management, and step-by-step guidance.
+      Hi, I'm <strong>Erimona Emmanuel</strong>, a passionate forex trader and mentor. Over the years, 
+      I've dedicated myself to mastering market structure, liquidity concepts, and smart money concepts (SMC) – 
+      the foundations of consistent profitability in the forex market.
+    </p>
+    <p>
+      My mentorship simplifies trading for you: no unnecessary confusion, just clear strategies, 
+      risk management discipline, and step-by-step guidance.
     </p>
   </section>
 
-  <!-- Packages Section -->
-  <section id="packages">
-    <h2>Coaching Packages</h2>
-    <div class="package-container">
-      <div class="package">
-        <h3>Beginner (2 Weeks)</h3>
-        <p>Forex basics, demo account setup, market structure fundamentals, daily Q&A support.</p>
+  <!-- Coaching Packages -->
+  <section id="packages" class="section">
+    <h2 class="section-title">Coaching Packages</h2>
+    <div class="packages">
+      <div class="card">
+        <h3>Beginner (2 weeks)</h3>
+        <p>Forex basics, demo account training, daily Q&A support.</p>
       </div>
-      <div class="package">
-        <h3>Intermediate (4 Weeks)</h3>
-        <p>Smart Money Concepts, liquidity hunts, consistency tips, weekly live chart reviews.</p>
+      <div class="card">
+        <h3>International Package (4 weeks)</h3>
+        <p>Smart Money Concepts, liquidity hunts, weekly live chart reviews.</p>
       </div>
-      <div class="package">
-        <h3>Advanced (6 Weeks)</h3>
-        <p>Top-down analysis, prop firm strategy, personal trading plan, risk management, exclusive trade breakdowns.</p>
+      <div class="card">
+        <h3>Advanced Package (6 weeks)</h3>
+        <p>Top-down analysis, prop firm challenge strategy, advanced risk management.</p>
       </div>
-      <div class="package">
-        <h3>1-on-1 Mentorship</h3>
-        <p>Private tailored coaching, Zoom/Google Meet, trade review & accountability, full resources.</p>
+      <div class="card">
+        <h3>One-on-One Mentorship</h3>
+        <p>Private tailored coaching, live Zoom/Google Meet, accountability & trade reviews.</p>
       </div>
     </div>
   </section>
 
   <!-- Contact Section -->
-  <section id="contact">
-    <h2>Get In Touch</h2>
-    <p>Reach me directly on WhatsApp for mentorship and guidance.</p>
-    <a href="https://wa.me/2348123669335" target="_blank" class="btn">Chat on WhatsApp</a>
+  <section id="contact" class="section">
+    <h2 class="section-title">Contact Me</h2>
+    <p>Reach me directly on:</p>
+    <a href="https://wa.me/2348123669335" class="btn">📱 WhatsApp</a>
+    <a href="https://t.me/yourtelegramusername" class="btn">💬 Telegram</a>
   </section>
 
-  <!-- Footer -->
+  <!-- Candlestick Chart -->
+  <section id="chart" class="section">
+    <h2 class="section-title">Live Forex Chart</h2>
+    <div class="chart-container">
+      <iframe src="https://s.tradingview.com/widgetembed/?frameElementId=tradingview_candles&symbol=FX:EURUSD&interval=15&hidesidetoolbar=1&theme=dark" 
+              width="100%" height="500" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </section>
+
   <footer>
-    <p>© 2025 Primenuel.FX | All Rights Reserved</p>
+    <p>© 2025 primenuel.fx | All Rights Reserved</p>
   </footer>
 
-  <!-- Live Chat (Tawk.to) -->
+  <!-- Scripts -->
+  <script src="script.js"></script>
+
+  <!-- Start of Tawk.to Script -->
   <script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    (function(){
-      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-      s1.async=true;
-      s1.src='https://embed.tawk.to/68a4392aed02831924d27d81/1j30nujh3';
-      s1.charset='UTF-8';
-      s1.setAttribute('crossorigin','*');
-      s0.parentNode.insertBefore(s1,s0);
-    })();
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/YOUR_PROPERTY_ID/1j30nujh3';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
   </script>
+  <!-- End of Tawk.to Script -->
 </body>
 </html>
